--- a/Mirana/app/views/index.scala.html
+++ b/Mirana/app/views/index.scala.html
@@ -4,4 +4,11 @@
 
     @play20.welcome(message, style = "Java")
 
+<form action="@routes.Application.addPerson()" method="post">
+    <input type="text" name="name">
+    <input type="text" apellido="apellido">
+    <button> Agregar doctor </button>
+
+</form>
+
 }
