--- a/Mirana/app/views/index.scala.html
+++ b/Mirana/app/views/index.scala.html
@@ -4,7 +4,7 @@
 
     @play20.welcome(message, style = "Java")
 
-<form action="@routes.Application.addPerson()" method="post">
+<form action="@routes.Application.addDoctor()" method="post">
     <input type="text" name="name">
     <input type="text" apellido="apellido">
     <button> Agregar doctor </button>
