--- a/Documents/mirana/app/views/index.scala.html
+++ b/Documents/mirana/app/views/index.scala.html
@@ -9,4 +9,13 @@
 		<input type="text" name="name"/>
 		<button>Add Person</button>
 	</form>
+
+	<form method="POST" action="@routes.Application.addEpisodio()">
+		<input type="text" name="Fecha"/>
+		<input type="text" name="Intensidad"/>
+		<input type="text" name="Descripcion"/>
+		<input type="text" name="Lugar"/>
+		<button>Agregar Episodio,auqniefaltaIDPERSONA</button>
+	</form>
+
 }
