--- a/Mirana/app/views/index.scala.html
+++ b/Mirana/app/views/index.scala.html
@@ -11,4 +11,13 @@
 
 </form>
 
+    <form method="POST" action="@routes.Application.addEpisodio()">
+        <input type="text" name="Fecha"/>
+        <input type="text" name="Intensidad"/>
+        <input type="text" name="Descripcion"/>
+        <input type="text" name="Lugar"/>
+        <button>Agregar Episodio,auqniefaltaIDPERSONA</button>
+    </form>
+
+
 }
