--- a/Mirana/app/views/index.scala.html
+++ b/Mirana/app/views/index.scala.html
@@ -11,4 +11,13 @@
 
 </form>
 
+<form action="@routes.Application.deleteDoctor()" method="post">
+    <input type="text" id="id">
+    <button> Eliminar doctor </button>
+
+</form>
+
+
+
+
 }
