--- a/Mirana/app/views/index.scala.html
+++ b/Mirana/app/views/index.scala.html
@@ -4,6 +4,7 @@
 
     @play20.welcome(message, style = "Java")
 
+<h1> Doctores</h1>
 <form action="@routes.Application.addDoctor()" method="post">
     <input type="text" name="name">
     <input type="text" apellido="apellido">
@@ -16,6 +17,8 @@
     <button> Eliminar doctor </button>
 
 </form>
+
+<h1>Pacientes</h1>
 
 
 
