--- a/Mirana/app/views/index.scala.html
+++ b/Mirana/app/views/index.scala.html
@@ -19,6 +19,16 @@
 </form>
 
 <h1>Pacientes</h1>
+<form action="@routes.pacientesController.addPaciente()" method="post">
+<input type="text" name="nombre">
+<input type="text" name="apellido">
+<input type="text" name="genero">
+<input type="text" name="fechaNacimiento">
+<input type="text" name="documentoIdentidad">
+<input type="text" name="tipoDocumentoIdentidad">
+<input type="text" name="email">
+<button> Agregar paciente </button>
+</form>
 
 
 
