Agregué unas rutas para el CRUD del paciente

--- a/Mirana/app/views/index.scala.html
+++ b/Mirana/app/views/index.scala.html
@@ -30,6 +30,10 @@
 <button> Agregar paciente </button>
 </form>
 
+<form action="@routes.pacientesController.deletePaciente()" method="delete">
+<input type="text" id="id">
+<button> Eliminar paciente </button>
+
 
 
 
